--- a/text.html
+++ b/text.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>Clinix</title>
+<title>Ламли - медицинский центр</title>
 <!--=================================
 Meta tags
 =================================-->
