--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>О компании — (клиники Di Центр)</title>
+<title>Ламли - медицинский центр</title>
 <!--=================================
 Meta tags
 =================================-->
