--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>Clinix -  Contact us</title>
+<title>Ламли - медицинский центр</title>
 <!--=================================
 Meta tags
 =================================-->
