--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ Body Content
                     <a href="#" class="nav-triger"><span class="fa fa-navicon"></span></a>
                    <ul class="main-menu">
                         <li class="active"><a href="index.html">Главная</a></li>
-                        <li><a href="team.html">О Компании</a></li>
-                        <li><a href="about-us.html">Услуги и цены</a></li>
-                        <li><a href="blog.html">Акции</a></li>
-                        <li><a href="shop.html">Врачи</a></li>
-                        <li><a href="#">Отзывы</a>
-                        <li><a href="contact-us.html">Новости</a></li>
+                        <li><a href="about-us.html">О Компании</a></li>
+                        <li><a href="#.html">Услуги и цены</a></li>
+                        <li><a href="#">Акции</a></li>
+                        <li><a href="#">Врачи</a></li>
+                        <li><a href="cxontact-us.html">Отзывы</a>
+                        <li><a href="text.html">Новости</a></li>
                     </ul>
                 </div>
             </nav>
@@ -270,7 +270,7 @@ Body Content
                     </div>
                     <div class="col-sm-3 mt-50 no-pad doctor style2 bg-blue4 animated fadeInLeft">
                         <div class="info">
-                        <h6 class="text-bold text-uppercase after-left-s pb-20">Андрианов Николай Александрович</h6>
+                        <h6 class="text-bold text-uppercase after-left-s pb-20">Алексеева Кристина Сейрановна</h6>
                         <p>Врач-травматолог-ортопед. Кандидат медицинских наук</p>
                         </div>
                         <figure><img src="assets/demo-data/dr.jpg" alt="/"></figure>
