--- a/text.html
+++ b/text.html
@@ -56,12 +56,12 @@ Body Content
                     <a href="#" class="nav-triger"><span class="fa fa-navicon"></span></a>
                     <ul class="main-menu">
                         <li class="active"><a href="index.html">Главная</a></li>
-                        <li><a href="team.html">О Компании</a></li>
+                        <li><a href="about-us.html">О Компании</a></li>
                         <li><a href="about-us.html">Услуги и цены</a></li>
-                        <li><a href="blog.html">Акции</a></li>
-                        <li><a href="shop.html">Врачи</a></li>
-                        <li><a href="#">Отзывы</a>
-                        <li><a href="contact-us.html">Новости</a></li>
+                        <li><a href="#">Акции</a></li>
+                        <li><a href="#">Врачи</a></li>
+                        <li><a href="contact-us.html">Отзывы</a>
+                        <li><a href="text.html">Новости</a></li>
                     </ul>
                 </div>
             </nav>
@@ -71,7 +71,7 @@ Body Content
         <div class="container">
             <ul class="bread-crumb">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="blog.html">Новости</a></li>
+                <li><a href="text.html">Новости</a></li>
             </ul>
             <h3 class="text-uppercase">Новости</h3>
         </div>
